--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3163,7 +3163,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("../../images/banner.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bannerpic.jpg");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
@@ -3304,7 +3304,7 @@
 /* CTA */
 
 	#cta {
-		background: #e89980;
+		background: #444444;
 		color: #f9e6df;
 		padding: 3.5em 0 4em 0;
 		text-align: center;
@@ -3326,7 +3326,10 @@
 		#cta .button {
 			box-shadow: none;
 			background: #fff;
-			color: #e89980;
+			color: black;
+		}
+		.button:hover {
+			font-weight: bold;
 		}
 
 		#cta input[type="text"],
